testsuite/tests/typecheck/should_fail/T16275B.hs
module T16275B where
